--- a/README
+++ b/README
@@ -1,5 +1,5 @@
 <p align="center">
-   <a href="https://discord.com/users/753887161060818955">
-      <img src="https://lanyard.cnrad.dev/api/753887161060818955?theme=dark&animated=true" />
-   </a>
+  <a href="https://discord.com/users/753887161060818955">
+    <img src="https://lanyard.cnrad.dev/api/753887161060818955?theme=dark&animated=true" alt="Discord Presence"/>
+  </a>
 </p>
